--- a/main.html
+++ b/main.html
@@ -7,9 +7,7 @@
 </head>
 
 <body>
-	<div style="margin:20px; padding:50px; background-color:lightblue; width:300px; border:15px solid blue">
-		This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
-	</div>
+	<div style="margin:20px; padding:50px; background-color:lightblue; width:300px; border:15px solid blue">This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
